[gd_scene load_steps=47 format=2]

[ext_resource path="res://Player/Player.png" type="Texture" id=1]
[ext_resource path="res://AnimationSpace2D.gd" type="Script" id=2]
[ext_resource path="res://Hurtboxes and hitboxes/Hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Hurtboxes and hitboxes/SwordHitbox.gd" type="Script" id=4]
[ext_resource path="res://Player/PlayerStates.gd" type="Script" id=5]
[ext_resource path="res://Shadows/MediumShadow.png" type="Texture" id=6]
[ext_resource path="res://Music and Sounds/Swipe.wav" type="AudioStream" id=7]
[ext_resource path="res://Music and Sounds/Evade.wav" type="AudioStream" id=8]
[ext_resource path="res://WhiteColor.shader" type="Shader" id=9]
[ext_resource path="res://Player/Move.gd" type="Script" id=10]
[ext_resource path="res://Player/KinematicPlayer.gd" type="Script" id=11]
[ext_resource path="res://Hurtboxes and hitboxes/HurtSystem.tscn" type="PackedScene" id=12]
[ext_resource path="res://Player/Attack.gd" type="Script" id=13]
[ext_resource path="res://Player/Roll.gd" type="Script" id=14]
[ext_resource path="res://Player/AttackAnimationSpace2D.tres" type="Resource" id=15]
[ext_resource path="res://Hurtboxes and hitboxes/PlayerHurtSystem.gd" type="Script" id=16]
[ext_resource path="res://Player/Idle.gd" type="Script" id=17]
[ext_resource path="res://Player/RunAnimationSpace2D.tres" type="Resource" id=18]
[ext_resource path="res://Player/RollAnimationSpace2D.tres" type="Resource" id=19]
[ext_resource path="res://Player/IdleAnimationSpace2D.tres" type="Resource" id=20]

[sub_resource type="GDScript" id=1]
script/source = "extends Node2D

const player_hurt_sound = preload(\"res://Player/PlayerHurtSound.tscn\")

var stats = PlayerStats

onready var player_states = $PlayerStates

func _ready():
	stats.connect(\"no_health\", self, \"queue_free\")
	

func _on_attack_animation_finished():
	player_states._on_attack_animation_finished()
		
func _on_roll_animation_finished():
	player_states._on_roll_animation_finished()

func _on_Hurtbox_area_entered(_area):
	var player_hurt_sound_node = player_hurt_sound.instance()
	GameEvents.emit_signal(\"add_child_asked\", player_hurt_sound_node)

"

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = ExtResource( 9 )
shader_param/active = false

[sub_resource type="ShaderMaterial" id=3]
resource_local_to_scene = true
shader = ExtResource( 9 )
shader_param/active = true

[sub_resource type="Animation" id=4]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("../Player/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 36, 37, 38, 39 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Player/HitboxPivot:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Player/HitboxPivot/SwordHitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "audio"
tracks/3/path = NodePath("../Player/AudioStreamPlayer")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 7 )
} ],
"times": PoolRealArray( 0.1 )
}

[sub_resource type="Animation" id=5]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("../Player/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34, 35 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Player/HitboxPivot:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 180.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Player/HitboxPivot/SwordHitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "audio"
tracks/3/path = NodePath("../Player/AudioStreamPlayer")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 7 )
} ],
"times": PoolRealArray( 0.1 )
}

[sub_resource type="Animation" id=6]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("../Player/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Player/HitboxPivot:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Player/HitboxPivot/SwordHitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "audio"
tracks/3/path = NodePath("../Player/AudioStreamPlayer")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 7 )
} ],
"times": PoolRealArray( 0.1 )
}

[sub_resource type="Animation" id=7]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("../Player/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 28, 29, 30, 31 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Player/HitboxPivot:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 270.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Player/HitboxPivot/SwordHitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "audio"
tracks/3/path = NodePath("../Player/AudioStreamPlayer")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 7 )
} ],
"times": PoolRealArray( 0.1 )
}

[sub_resource type="Animation" id=8]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../Player/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 18 ]
}

[sub_resource type="Animation" id=9]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../Player/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 12 ]
}

[sub_resource type="Animation" id=10]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../Player/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=11]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../Player/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}

[sub_resource type="Animation" id=12]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("../Player/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 55, 56, 57, 58, 59 ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("../Player/AudioStreamPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 8 )
} ],
"times": PoolRealArray( 0.1 )
}

[sub_resource type="Animation" id=13]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("../Player/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 50, 51, 52, 53, 54 ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("../Player/AudioStreamPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 8 )
} ],
"times": PoolRealArray( 0.1 )
}

[sub_resource type="Animation" id=14]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("../Player/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 40, 41, 42, 43, 44 ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("../Player/AudioStreamPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 8 )
} ],
"times": PoolRealArray( 0.1 )
}

[sub_resource type="Animation" id=15]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("../Player/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 45, 46, 47, 48, 49 ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("../Player/AudioStreamPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 8 )
} ],
"times": PoolRealArray( 0.1 )
}

[sub_resource type="Animation" id=16]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../Player/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 19, 20, 21, 22, 23, 18 ]
}

[sub_resource type="Animation" id=17]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../Player/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 13, 14, 15, 16, 17, 12 ]
}

[sub_resource type="Animation" id=18]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../Player/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 0 ]
}

[sub_resource type="Animation" id=19]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../Player/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 8, 9, 10, 11, 6 ]
}

[sub_resource type="CapsuleShape2D" id=20]
height = 12.0

[sub_resource type="CapsuleShape2D" id=21]
radius = 8.28668
height = 6.7527

[sub_resource type="CapsuleShape2D" id=22]
radius = 5.81877
height = 4.79184

[sub_resource type="CapsuleShape2D" id=23]
radius = 5.02821
height = 4.64222

[sub_resource type="Animation" id=24]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../../Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=25]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("../../Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="GDScript" id=26]
script/source = "tool
extends AnimationPlayer

export(NodePath) var sprite_node_path = \"\"

func _ready():
	var path = String(sprite_node_path) + \":material:shader_param/active\"
	var blink = get_animation(\"BlinkAnimation\")
	blink.track_set_path(0, path)
	blink = get_animation(\"BlinkAnimationStop\")
	blink.track_set_path(0, path)
	
func _get_configuration_warning() -> String:
	var warnings = PoolStringArray()
	if sprite_node_path == \"\":
		warnings.append(\"Set a path to the Sprite referenced\")
	return warnings.join(\"\\n\")
"

[node name="Player" type="Node2D"]
script = SubResource( 1 )

[node name="PlayerStates" type="Node" parent="."]
script = ExtResource( 5 )
__meta__ = {
"_editor_description_": ""
}
init_state_path = NodePath("Idle")
kbody_node_path = NodePath("../KinematicComponent2D")
animation_space_node_path = NodePath("../AnimationSpace2D")
sword_hitbox_node_path = NodePath("../HitboxPivot/SwordHitbox")
hurtbox_node_path = NodePath("../HurtSystem/Hurtbox")
shadow_sprite_node_path = NodePath("../ShadowSprite")

[node name="Idle" type="Node" parent="PlayerStates"]
script = ExtResource( 17 )

[node name="Move" type="Node" parent="PlayerStates"]
script = ExtResource( 10 )

[node name="Attack" type="Node" parent="PlayerStates"]
script = ExtResource( 13 )

[node name="Roll" type="Node" parent="PlayerStates"]
script = ExtResource( 14 )

[node name="InputBufferTimer" type="Timer" parent="PlayerStates"]

[node name="ShadowSprite" type="Sprite" parent="."]
material = SubResource( 2 )
position = Vector2( 0, 2.5 )
texture = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 3 )
position = Vector2( 0, -9 )
texture = ExtResource( 1 )
hframes = 60
frame = 36

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
pause_mode = 2
anims/AttackDown = SubResource( 4 )
anims/AttackLeft = SubResource( 5 )
anims/AttackRight = SubResource( 6 )
anims/AttackUp = SubResource( 7 )
anims/IdleDown = SubResource( 8 )
anims/IdleLeft = SubResource( 9 )
anims/IdleRight = SubResource( 10 )
anims/IdleUp = SubResource( 11 )
anims/RollDown = SubResource( 12 )
anims/RollLeft = SubResource( 13 )
anims/RollRight = SubResource( 14 )
anims/RollUp = SubResource( 15 )
anims/RunDown = SubResource( 16 )
anims/RunLeft = SubResource( 17 )
anims/RunRight = SubResource( 18 )
anims/RunUp = SubResource( 19 )

[node name="AnimationSpace2D" type="Node" parent="."]
script = ExtResource( 2 )
animation_player_path = NodePath("../AnimationPlayer")
spaces = [ ExtResource( 20 ), ExtResource( 15 ), ExtResource( 19 ), ExtResource( 18 ) ]

[node name="HitboxPivot" type="Position2D" parent="."]
position = Vector2( 0, -4 )
rotation = 1.5708

[node name="SwordHitbox" parent="HitboxPivot" instance=ExtResource( 3 )]
position = Vector2( 15, 0 )
collision_mask = 72
script = ExtResource( 4 )

[node name="CollisionShape2D" parent="HitboxPivot/SwordHitbox" index="0"]
shape = SubResource( 20 )
disabled = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="Objects" type="Area2D" parent="."]
input_pickable = false
collision_layer = 0
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="Objects"]
position = Vector2( -0.840897, -7.25273 )
shape = SubResource( 21 )

[node name="KinematicComponent2D" type="KinematicBody2D" parent="."]
input_pickable = true
collision_layer = 2
script = ExtResource( 11 )
remote_path = NodePath("..")
acceleration = 2.2
max_speed = 2
friction = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicComponent2D"]
position = Vector2( -0.106323, 0.941025 )
rotation = -1.5708
shape = SubResource( 22 )

[node name="HurtSystem" parent="." instance=ExtResource( 12 )]
script = ExtResource( 16 )

[node name="Hurtbox" parent="HurtSystem" index="0"]
input_pickable = false
collision_layer = 4

[node name="CollisionShape2D" parent="HurtSystem/Hurtbox" index="0"]
position = Vector2( 0, -5.959 )
shape = SubResource( 23 )

[node name="Timer" parent="HurtSystem/Hurtbox" index="1"]
wait_time = 1.5

[node name="BlinkAnimationPlayer" parent="HurtSystem" index="2"]
anims/BlinkAnimation = SubResource( 24 )
anims/BlinkAnimationStop = SubResource( 25 )
script = SubResource( 26 )
sprite_node_path = NodePath("../../Sprite")
[connection signal="state_changed" from="PlayerStates" to="PlayerStates" method="_on_PlayerStates_state_changed"]
[connection signal="animation_finished" from="AnimationPlayer" to="PlayerStates" method="_on_AnimationPlayer_animation_finished"]
[connection signal="input_event" from="KinematicComponent2D" to="PlayerStates" method="_on_KinematicComponent2D_input_event"]
[connection signal="area_entered" from="HurtSystem/Hurtbox" to="." method="_on_Hurtbox_area_entered"]

[editable path="HitboxPivot/SwordHitbox"]

[editable path="HurtSystem"]

[editable path="HurtSystem/Hurtbox"]
